Add web UI for editing regex lists

--- a/callattendant/userinterface/templates/base.html
+++ b/callattendant/userinterface/templates/base.html
@@ -41,7 +41,10 @@
           <li class="nav-item" id="blocked">
             <a class="nav-link" href="/callers/blocked">Blocked</a>
           </li>
-          <li class="nav-item" id="messages">
+           <li class="nav-item" id="regexlists">
+            <a class="nav-link" href="/callers/regexlists">Regex Lists</a>
+          </li>
+         <li class="nav-item" id="messages">
             <a class="nav-link" href="/messages">Messages</a>
           </li>
         </ul>
