Add 'Permit Next Call' button

--- a/callattendant/userinterface/templates/base.html
+++ b/callattendant/userinterface/templates/base.html
@@ -89,7 +89,11 @@
         </ul>
       </div>
     </div>
+    <div>
+       <button id="permit-next-call-button" type="button" class="btn btn-primary">Permit Next Call</button>
+    </div>
   </nav>
+
 
   {% with messages = get_flashed_messages() %}
     {% if messages %}
@@ -130,6 +134,12 @@
       {% if active_nav_item %}
         $('#{{ active_nav_item }}').addClass('active');
       {% endif %}
+    });
+
+    $('#permit-next-call-button').on('click', function (event) {
+      $.get(" /callers/permitnextcall", "", function(data, status) {
+        alert("Next call will be permitted.");
+      });
     });
   </script>
 </body>
